<resources>
    <string name="app_name">WhatsApp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="c_username">Username</string>
    <string name="c_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="whatsapp_logo">WhatsApp Logo</string>
</resources>