<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="20dp"
    android:orientation="vertical"
    android:id="@+id/create_account_layout"
    android:background="@android:color/white">

    <EditText
    android:id="@+id/etEmail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/email"
    android:padding="12dp"
    android:textSize="16sp"
    android:background="@android:drawable/edit_text"
    android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/c_username"
        android:padding="12dp"
        android:textSize="16sp"
        android:background="@android:drawable/edit_text"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:padding="12dp"
        android:textSize="16sp"
        android:background="@android:drawable/edit_text"
        android:inputType="textPhonetic"
        android:layout_marginTop="10dp"/>


    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/c_password"
        android:padding="12dp"
        android:textSize="16sp"
        android:background="@android:drawable/edit_text"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:padding="12dp"
        android:textSize="16sp"
        android:background="@android:drawable/edit_text"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textSize="16sp"
        android:backgroundTint="#2196F3"
        android:textColor="#FFFFFF"
        android:padding="12dp"
        android:layout_marginTop="20dp"/>

</LinearLayout>
